servicemesh/02_routing-via-percent/frontend-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  namespace: training
  name: frontend
spec:
  host: "frontend.training.svc.cluster.local"
  subsets:
    - name: v1
      labels:
        version: 1.0.0
    - name: v2
      labels:
         version: 2.0.0
