servicemesh/02_routing-via-percent/frontend-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: training  
  name: frontend
spec:
  hosts:
      - "*"
  gateways:
    - gateway
  http:
    - route:
      - destination:
          host: frontend.training.svc.cluster.local
          subset: v1
        weight: 10
      - destination:
          host: frontend.training.svc.cluster.local
          subset: v2          
        weight: 90
